KubernetsFiles/chat/chat.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: kanban
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: walymb/chat:latest
        resources:
          limits:
            memory: "300Mi"
            cpu: "600m"
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: keys-volume
          mountPath: /app/keys
      volumes:
      - name: keys-volume
        persistentVolumeClaim:
          claimName: keys-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: kanban
spec:
  selector:
    app: chat
  ports:
  - port: 8090
    targetPort: 8090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: kanban
  labels:
    name: chat-ingress
spec:
  rules:
  - host: chat.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chat-service
            port: 
              number: 8090

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-websocket-ingress
  namespace: kanban
  labels:
    name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  # Tempo limite de leitura para 10 minutos
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  # Tempo limite de envio para 10 minutos
    nginx.ingress.kubernetes.io/websocket-services: "chat-ws-service"  # Nome do serviço de backend WebSocket
    nginx.ingress.kubernetes.io/websocket-timeout: "3600"  # Tempo limite da conexão WebSocket para 10 minutos
spec:
  rules:
  - host: chat.rancher.waly.dev.br
    http:
      paths:
      - pathType: Prefix
        path: "/connect"
        backend:
          service:
            name: chat-ws-service
            port:
              number: 8090
